--- a/templates/date_selection.html
+++ b/templates/date_selection.html
@@ -38,7 +38,7 @@
         <a href="/data" class="btn" style="float: left;">To data selection</a>
 {#            <input class="btn" type="submit" formaction="/data" value="To data selection">#}
 {#        </form>#}
-        <a href="/" class="btn" style="float: right;">To Home Page</a>
+        <a href="/" class="btn" style="float: right;">Home Page</a>
     </div>
     <br>
 
