--- a/templates/gps.html
+++ b/templates/gps.html
@@ -53,7 +53,7 @@
           display: grid;
           grid-template-columns: 1fr 1fr;
           {#grid-gap: 10px;#}
-          width: 90%;
+          width: 95%;
           margin-left: 5%;
 
           background-color: #fbfbfc;
@@ -65,7 +65,7 @@
         .grid__item
         {
           border-radius: 4px;
-            border: 1px solid #f6f5f5;
+            {#border: 1px solid #fbfbfc;#}
             {#border: 1px solid #030303;#}
           min-height: 20vh;
         }
